# simple_cpp_exercise

./: CMakeLists.txt  README.md  behaviour_test.cpp  behaviour_test.h  flowable.cpp  flowable.h  main.cpp  mem_investigation.cpp  mem_investigation.h  publisher.cpp  publisher.h  queue.cpp  queue.h  subscriber.cpp  subscriber.h
